app/styles/app.css
:root {
  --aside-width: 400px;
  --cart-aside-summary-height-with-discount: 300px;
  --grid-item-width: 355px;
  --header-height: 64px;
  /* Fallback; JS updates this to the actual header bottom offset */
  --aside-top: 110px;
  --color-dark: #000;
}

/*
* --------------------------------------------------
* Non anchor links
* --------------------------------------------------
*/
.link:hover {
  text-decoration: underline;
  cursor: pointer;
}

/*
* --------------------------------------------------
* components/Aside
* --------------------------------------------------
*/

@media (min-width: 1024px) {
  :root {
    --aside-top: 70px;
  }

  aside {
    background: var(--color-background);
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
    max-width: var(--aside-width);
    min-width: var(--aside-width);
    position: fixed;
    top: 0;
    bottom: 0;
    right: calc(-1 * var(--aside-width));
    transition: transform 200ms ease-in-out;
    overflow-y: auto;
    overscroll-behavior: contain;
    padding-top: var(--aside-top);
    z-index: 200;
    -webkit-overflow-scrolling: touch;
  }
}
@media (min-width: 601px) and (max-width: 1023px) {
  :root {
    --aside-width: 350px;
  }
  aside {
    background: var(--color-background);
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
    width: var(--aside-width);
    position: fixed;
    top: 0;
    bottom: 0;
    right: calc(-1 * var(--aside-width));
    transition: transform 200ms ease-in-out;
    overflow-y: auto;
    overscroll-behavior: contain;
    padding-top: var(--aside-top);
    z-index: 200;
    -webkit-overflow-scrolling: touch;
  }
}
@media (max-width: 600px) {
  :root {
    --aside-width: 300px;
  }

  aside {
    background: var(--color-background);
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
    width: var(--aside-width);
    position: fixed;
    top: 0;
    bottom: 0;
    right: calc(-1 * var(--aside-width));
    transition: transform 200ms ease-in-out;
    overflow-y: auto;
    overscroll-behavior: contain;
    padding-top: var(--aside-top);
    z-index: 200;
    -webkit-overflow-scrolling: touch;
  }
}

aside header {
  align-items: center;
  border-bottom: 1px solid var(--color-dark);
  display: flex;
  justify-content: center;
  padding: 0 20px;
}

aside header h3 {
  margin: 0;
}

aside header .close {
  font-weight: bold;
  opacity: 0.8;
  text-decoration: none;
  transition: all 200ms;
  width: 90px;
}

aside header .close:hover {
  opacity: 1;
}

aside header h2 {
  margin-bottom: 0.6rem;
  margin-top: 0;
}

aside p {
  margin: 0 0 0.25rem;
}

aside p:last-child {
  margin: 0;
}

aside li {
  margin-bottom: 0.125rem;
}

.overlay {
  background: rgba(0, 0, 0, 0.2);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: fixed;
  right: 0;
  top: 0;
  transition: opacity 400ms ease-in-out;
  transition: opacity 400ms;
  visibility: hidden;
  z-index: 200;
}

.overlay .close-outside {
  background: transparent;
  border: none;
  color: transparent;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: calc(100% - var(--aside-width));
}

.overlay .light {
  background: rgba(255, 255, 255, 0.5);
}

.overlay .cancel {
  cursor: default;
  height: 100%;
  position: absolute;
  width: 100%;
}

.overlay.expanded {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}
/* reveal aside */
.overlay.expanded aside {
  transform: translateX(calc(var(--aside-width) * -1));
}
/* 
button.reset {
  border: 0;
  background: inherit;
  font-size: inherit;
}

button.reset > * {
  margin: 0;
}

button.reset:not(:has(> *)) {
  height: 1.5rem;
  line-height: 1.5rem;
}

button.reset:hover:not(:has(> *)) {
  text-decoration: underline;
  cursor: pointer;
} */

/*
* --------------------------------------------------
* components/Header
* --------------------------------------------------
*/
.header {
  background: var(--color-background);
  /* height: var(--header-height); */
  position: sticky;
  color: white;
  top: 0;
  z-index: 300;
}

.main-navbar-small-top-row {
  display: flex;
  justify-content: space-between;
}

.main-navbar-small-bottom-row {
  display: flex;
  justify-content: center;
}

/* @media (max-width: 713px) {
  .navbar {
    display: flex;
    justify-content: center;
    align-items: center;
  }
} */

/* @media (max-width: 600px) {
  .nav-links-container {
    flex-wrap: wrap;
  }
} */

.header-menu-item {
  cursor: pointer;
  color: white;
}
@media (max-width: 500px) {
  .header-ctas {
    align-items: center;
    display: flex;
    grid-gap: 0.5rem;
    margin-left: auto;
    z-index: 100;
    margin-right: 4px;
  }
}
@media (min-width: 501px) {
  .header-ctas {
    align-items: center;
    display: flex;
    grid-gap: 1rem;
    margin-left: auto;
    z-index: 100;
    margin-right: 20px;
  }
}

/*
* --------------------------------------------------
* components/Footer
* --------------------------------------------------
*/
.footer {
  background: var(--color-background);
  margin-top: auto;
}

.footer-menu {
  align-items: center;
  display: flex;
  grid-gap: 1rem;
  padding: 1rem;
}

.footer-menu a {
  color: var(--color-light);
}

/*
* --------------------------------------------------
* components/Cart
* --------------------------------------------------
*/
.cart-main {
  /* height: 100%;
  max-height: 100vh;
  overflow-y: auto;
  width: auto;
  margin: 8px 20px 20px 20px; */
}

@media (max-width: 1279px) {
  .cart-line-horizontal-product {
    display: grid;
    grid-template-rows: 1fr 1fr;
  }
  .cart-line-vertical-product {
    display: grid;
    grid-template-rows: 1fr 1fr;
  }
  .cart-line-stock-product {
    display: grid;
    grid-template-rows: 1fr;
  }
  .cart-line-horizontal-product-img {
    height: 95px;
    width: 115px;
    object-fit: cover;
  }
  .cart-line-vertical-product-img {
    height: 115px;
    width: 95px;
    object-fit: cover;
  }
  .cart-line-stock-product-img {
    height: 95px;
    width: 115px;
    object-fit: cover;
  }
}
/* ... */

